--- a/src/components/header/header-view.module.scss
+++ b/src/components/header/header-view.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   width: 100%;
@@ -13,5 +13,37 @@
 }
 
 .logo {
-  height: 9rem;
+  padding-left: 1rem;
+  height: 5rem;
+  cursor: pointer;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.navItem {
+  margin-right: 1rem;
+  cursor: pointer;
+  color: rgb(13, 32, 62);
+  position: relative;
+
+  &:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    opacity: 0;
+    height: 0.1rem;
+    background-color: rgb(264, 198, 82);
+    transition: all 0.75s ease-in-out;
+  }
+}
+
+.navItem:hover:after {
+  width: 100%;
+  opacity: 1;
 }
